--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "meepo-footer",
-    "version": "1.1.0",
-    "description": "runner for angular",
+    "name": "meepo-empty",
+    "version": "1.1.1",
+    "description": "empty for angular",
     "main": "./bundles/meepo.umd.js",
     "module": "./esm5/meepo.js",
     "es2015": "./esm2015/meepo.js",
@@ -18,15 +18,15 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/meepobrother/meepo-footer.git"
+        "url": "git+https://github.com/meepobrother/meepo-empty.git"
     },
     "keywords": [],
     "author": "imeepos",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/meepobrother/meepo-footer/issues"
+        "url": "https://github.com/meepobrother/meepo-empty/issues"
     },
-    "homepage": "https://github.com/meepobrother/meepo-footer/README.md",
+    "homepage": "https://github.com/meepobrother/meepo-empty/README.md",
     "devDependencies": {
         "@angular/cli": ">=1.6.1",
         "@angular/compiler": ">=5.1.2",
@@ -49,23 +49,7 @@
         "@angular/core": ">=5.1.2",
         "@angular/forms": ">=5.1.2",
         "@angular/platform-browser": ">=5.1.2",
-        "@angular/platform-webworker": "^5.1.2",
-        "@angular/platform-webworker-dynamic": "^5.1.2",
         "@angular/router": ">=5.1.2",
-        "@angular/service-worker": "^5.1.2",
-        "enhanced-resolve": "^4.0.0-beta.2",
-        "meepo-axios": ">=1.3.8",
-        "meepo-base": ">=1.2.6",
-        "meepo-base64": ">=1.1.6",
-        "meepo-core": ">=3.2.7",
-        "meepo-event": ">=1.1.2",
-        "meepo-icons": ">=1.0.7",
-        "meepo-loader": ">=1.1.1",
-        "meepo-permissions": ">=1.1.7",
-        "meepo-popover": ">=1.0.3",
-        "meepo-store": ">=1.0.5",
-        "meepo-uuid": ">=1.1.1",
-        "meepo-xscroll": ">=1.4.5",
         "reflect-metadata": "^0.1.10",
         "rxjs": "^5.5.5",
         "zone.js": "0.8.4"
