--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -26,7 +26,7 @@
         "annotateForClosureCompiler": true,
         "strictMetadataEmit": true,
         "flatModuleOutFile": "index.js",
-        "flatModuleId": "meepo-footer",
+        "flatModuleId": "meepo-empty",
         "skipTemplateCodegen": true
     },
     "exclude": [
